test/domains/shannon/expandError.good
domain(3): 		{1..4, 1..4, 1..4}
expandError.chpl:5: error: halt reached - ***Error: Degenerate dimension created in dimension 1***
